--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -303,7 +303,7 @@ Landing Page
 }
 
 .mobile-landing-page-hero-header {
-  font-size: clamp(2rem, 5vw + 1rem, 4rem);
+  font-size: clamp(2.3rem, 5vw + 1rem, 4rem);
   text-wrap: pretty;
   line-height: 1.2;
   color: white;
@@ -331,10 +331,139 @@ Landing Page
   margin-top: 1.5rem;
 }
 
-/* Main section */
-/* .landing-page-main {
+/* Featured posts */
+.landing-page-featured-posts-container {
+  padding: 2rem 0;
+  padding-bottom: 3rem;
   background: white;
-} */
+}
+
+.landing-page-featured-posts-wrapper {
+  width: 85%;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  gap: 2rem;
+}
+
+.landing-page-featured-post-header-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+  gap: 1rem;
+}
+
+.landing-page-featured-posts-header {
+  text-wrap: pretty;
+  color: var(--orange-10);
+  line-height: 1;
+  font-size: clamp(2rem, 5vw + 1rem, 2.5rem);
+}
+
+.landing-featured-posts-text {
+  letter-spacing: 0.07rem;
+  line-height: 1.5;
+  color: var(--orange-20);
+  max-width: 500px;
+}
+
+.landing-page-featured-posts {
+  display: grid;
+  align-content: start;
+  gap: 3rem;
+}
+
+.landing-page-featured-post {
+  display: grid;
+  align-content: start;
+  gap: 1rem;
+}
+
+.landing-page-featured-post-image-container {
+  border-radius: 8px;
+}
+
+.landing-page-featured-post-image{
+  width: 100%;
+  height: 100;
+  aspect-ratio: 4/3;
+  object-fit: cover;
+  display: block;
+  border-radius: 8px;
+}
+
+.landing-page-featured-post-text-content {
+  display: grid;
+  align-content: end;
+  gap: 0.5rem;
+}
+
+.landing-page-featured-post-title {
+  color: var(--orange-10);
+  line-height: 1.3;
+  font-size: clamp(1.1rem, 1vw + 1rem , 1.7rem);
+  font-weight: 600;
+}
+
+.landing-page-featured-post-content {
+  letter-spacing: 0.07rem;
+  color: var(--orange-20);
+  line-height: 1.5;
+  text-wrap: pretty;
+}
+
+.landing-page-featured-post-read-more {
+  color:hsl(7, 100%, 54%);
+  text-decoration:underline;
+  letter-spacing: 0.05rem;
+}
+
+.landing-page-featured-post-like {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  margin-top: 0.8rem;
+}
+
+.landing-page-featured-post-like-container {
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+  color: var(--black-50);
+}
+
+.landing-page-featured-post-clap {
+  font-size: 1.2rem;
+}
+
+.landing-page-featured-post-like-count,
+.landing-page-featured-post-like-text {
+  font-size: 0.9rem;
+}
+
+.landing-page-featured-post-num-of-replies-container {
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+  color: var(--black-50);
+}
+
+.landing-page-featured-post-num-of-post {
+  font-size: 1.1rem;
+}
+
+.landing-page-featured-post-reply-count,
+.landing-page-featured-post-reply-text {
+  font-size: 0.9rem;
+}
+
+/* end */
+
+/* Landing page topics */
+.landing-page-topics-wrapper {
+  background: #e7ded5;
+}
 
 .landing-page-topics-container {
   padding: 2rem 0;
@@ -343,33 +472,55 @@ Landing Page
   max-width: 1200px;
   margin: 0 auto;
   display: grid;
+  align-content: start;
   gap: 2rem;
 }
 
 .landing-page-topic-header-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+  gap: 1.2rem;
 }
 
 .landing-page-topic-header {
   text-wrap: pretty;
   color: var(--orange-10);
   line-height: 1;
-  font-size: clamp(2rem, 5vw + 1rem, 2.6rem);
+  font-size: clamp(2rem, 5vw + 1rem, 2.5rem);
+}
+
+.landing-page-topic-text {
+  letter-spacing: 0.07rem;
+  line-height: 1.5;
+  color: var(--orange-20);
+  max-width: 500px;
+}
+
+.landing-page-topic-see-all-forums-container {
+  display: none;
 }
 
 .landing-page-topics {
   display: grid;
-  align-self: start;
-  gap: 3rem;
+  align-content: start;
+  gap: 2rem;
 }
 
 .landing-page-topic {
+  position: relative;
   display: grid;
   align-content: start;
   gap: 0.8rem;
+  border-radius: 8px;
+  transition: transform 200ms linear;
+}
+
+@media (hover) {
+  .landing-page-topic:hover {
+    transform: translateY(-0.5rem);
+  }
 }
 
 .landing-page-topic-image {
@@ -380,54 +531,31 @@ Landing Page
   border-radius: 8px;
 }
 
-.landing-page-topic-text-container {
-  display: grid;
-  align-content: start;
-  gap: 0.5rem;
+.landing-page-bg-overlay {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  background: rgba(0, 0, 0, 0.38);
 }
 
 .landing-page-topic-name {
-  color: var(--orange-10);
+  color: white;
   line-height: 1.4;
   letter-spacing: 0.04rem;
-  font-size: 1.25rem;
-  font-weight: 600;
-}
-
-.landing-page-topic-description {
-  letter-spacing: 0.07rem;
-  color: var(--orange-20);
-  line-height: 1.5;
-  text-wrap: pretty;
-}
-
-.landing-page-topic-read-more {
-  color:#ff3d24;
-  text-decoration:underline;
-  letter-spacing: 0.05rem;
-}
-
-.landing-page-topic-post-count {
-  display: flex;
-  align-items: start;
-  gap: 0.3rem;
-  color: var(--black-60);
-  margin-top: 0.5rem;
-}
-
-.landing-page-topic-num-of-post {
-  color: var(--black-70);
   font-size: 1.2rem;
+  font-weight: 600;
+  
+  position: absolute;
+  z-index: 3;
+  top: 1rem;
+  left: 1rem;
 }
 
-.landing-page-topic-total-post-count {
-  font-size: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  line-height: 1;
-}
-.landing-page-topic-see-all-forums-container {
+.mobile-landing-page-topic-see-all-forums-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -447,11 +575,18 @@ Landing Page
   outline: 2px solid #ff452d;
   font-weight: 500;
 }
+
+@media (hover) {
+  .landing-page-topic-see-all-forums:hover {
+    background: #ff452d;
+    color: white;
+  }
+}
 /* end */
+
 
 /* Landing page posts */
 .landing-page-posts-container {
-  background: #e7ded5;
   padding: 2rem 0;
   padding-bottom: 3rem;
 }
@@ -675,21 +810,31 @@ Landing Page
 
 @media screen and (min-width: 676px) {
 
+  .landing-page-featured-posts-wrapper {
+    width: 90%;
+  }
+
+  .landing-page-featured-posts {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .landing-page-featured-post-title {
+    font-size: clamp(1.1rem, 1vw + 1rem , 1.2rem);
+  }
+
   .landing-page-topics-container {
-    padding-top: 3rem;
-    padding-bottom: 4rem;
+    width: 90%;
     gap: 3rem;
   }
 
   .landing-page-topics {
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); 
   }
 
-  .landing-page-posts-container {
-    padding-top: 3rem;
-    padding-bottom: 4rem;
+  .landing-page-posts-wrapper {
+    width: 90%;
   }
-
+  
   .landing-page-posts-wrapper {
     gap: 3rem;
   }
@@ -783,7 +928,73 @@ Landing Page
   }
 }
 
+@media screen and (min-width: 1000px) {
+
+  .landing-page-featured-post:first-child,
+  .landing-page-featured-post:last-child{
+    grid-column: 1 / -1;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: start;
+    gap: 3rem;
+  }
+
+  .landing-page-featured-post:first-child > 
+  .landing-page-featured-post-image-container
+  .landing-page-featured-post-image,
+  .landing-page-featured-post:last-child > 
+  .landing-page-featured-post-image-container
+  .landing-page-featured-post-image{
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 4/2;
+    object-fit: cover;
+    display: block;
+  }
+
+  .landing-page-featured-post:first-child > 
+  .landing-page-featured-post-text-content
+  .landing-page-featured-post-title,
+  .landing-page-featured-post:last-child > 
+  .landing-page-featured-post-text-content
+  .landing-page-featured-post-title {
+    font-size: clamp(1.2rem, 1vw + 1rem , 2.2rem);
+  }
+  
+}
+
 @media screen and (min-width: 1100px) {
+  .landing-page-featured-posts-container {
+    padding: 3rem 0;
+    padding-bottom: 4rem;
+  }
+
+  .landing-page-featured-posts {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .landing-page-featured-post:last-child{
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+    grid-template-columns: initial;
+    align-content: start;
+    gap: 1rem;
+  }
+
+  .landing-page-featured-post:last-child > 
+  .landing-page-featured-post-image-container
+  .landing-page-featured-post-image{
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 4/3;
+    object-fit: cover;
+    display: block;
+  }
+
+  .landing-page-featured-post:last-child > 
+  .landing-page-featured-post-text-content
+  .landing-page-featured-post-title {
+    font-size: clamp(1.1rem, 1vw + 1rem , 1.2rem);
+  }
 
   .landing-page-hero-header {
     font-size: clamp(2rem, 5vw + 1rem, 3.7rem);
@@ -791,6 +1002,61 @@ Landing Page
 
   .landing-page-hero-text-wrapper {
     width: 45%;
+  }
+
+  .landing-page-topics-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 7rem;
+    padding: 6rem 0;
+  }
+
+  .landing-page-posts-container {
+    padding-top: 3rem;
+    padding-bottom: 4rem;
+  }
+
+  .landing-page-topic-header-container {
+    flex: 1
+  }
+
+  .landing-page-topic-header {
+    font-size: clamp(2rem, 5vw + 1rem, 2.8rem);
+  }
+
+  .landing-page-topics {
+    flex: 2;
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 1.5rem
+  }
+
+  .landing-page-topic-image {
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 4/2;
+    object-fit: cover;
+    display: block;
+    border-radius: 8px;
+    object-position: center;
+  }
+
+  .landing-page-topic-name {
+    font-size: 1.05rem;
+  }
+
+  .landing-page-topic-see-all-forums-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    text-align: center;
+    margin-top: 1rem;
+  }
+
+  .mobile-landing-page-topic-see-all-forums-container {
+    display: none
   }
 }
 
@@ -912,35 +1178,6 @@ NAVBAR
   font-size: 1.8rem;
   padding: 0 2rem;
 }
-
-/* .navbar-user-account-image-container {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  padding: 0 2rem;
-  padding-bottom: 1rem;
-  gap: 1rem;
-  border-bottom: 1px solid var(--black-80);
-}
-
-.navbar-user-profile-image {
-  width: 40px;
-  display: block;
-  height: auto;
-}
-
-.navbar-user-useranme {
-  font-size: 0.9rem;
-  font-weight: 500;
-} */
-
-/* .navbar-user-menu-tobble-btn {
-  background: none;
-  border: none;
-  font-size: 1rem;
-  color: rgb(88, 88, 88);
-} */
 
 .navbar-navlink {
   width: 100%;
