--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -62,7 +62,7 @@ input[type='email'] {
 
 button,
 textarea {
-  font-family: 'Poppins', sans-serif;
+   font-family: 'Poppins', sans-serif;
 }
 
 /* loading */
@@ -351,7 +351,7 @@ Landing Page
   flex-direction: column;
   justify-content: start;
   align-items: start;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .landing-page-featured-posts-header {
@@ -423,7 +423,7 @@ Landing Page
   display: flex;
   align-items: center;
   gap: 1.5rem;
-  margin-top: 0.8rem;
+  margin-top: 0.3rem;
 }
 
 .landing-page-featured-post-like-container {
@@ -481,7 +481,7 @@ Landing Page
   flex-direction: column;
   justify-content: start;
   align-items: start;
-  gap: 1.2rem;
+  gap: 0.5rem;
 }
 
 .landing-page-topic-header {
@@ -593,7 +593,7 @@ Landing Page
 
 .landing-page-posts-wrapper {
   width: 85%;
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
   display: grid;
   gap: 2rem;
@@ -601,33 +601,36 @@ Landing Page
 
 .landing-page-post-header-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-  text-align: center;
+  flex-direction: column;
+  align-items: start;
+  justify-content: start;
+  gap: 0.5rem;
 }
 
 .landing-page-posts-header {
   text-wrap: pretty;
   color: var(--orange-10);
-  text-align: center;
   line-height: 1;
-  font-size: clamp(2rem, 4vw + 1rem, 2.6rem);
+  font-size: clamp(2rem, 4vw + 1rem, 2.5rem);
+}
+
+.landing-page-posts-text {
+  letter-spacing: 0.07rem;
+  line-height: 1.5;
+  color: var(--orange-20);
+  max-width: 500px;
 }
 
 .landing-page-posts {
   display: grid;
   align-content: start;
-  gap: 2rem;
+  gap: 3rem;
 }
 
 .landing-page-post {
-  position: relative;
   display: grid;
-  align-items: center;
+  align-content: start;
   gap: 1rem;
-  border-radius: 8px;
 }
 
 .landing-page-post-image-container {
@@ -637,51 +640,28 @@ Landing Page
 .landing-page-post-image{
   width: 100%;
   height: 100;
-  aspect-ratio: 1/1;
+  aspect-ratio: 4/3;
   object-fit: cover;
   display: block;
   border-radius: 8px;
 }
 
-.landing-page-post-color-overlay {
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to top,
-   rgb(0, 0, 0), 
-   rgba(0, 0, 0, 0.6),
-   rgba(0, 0, 0, 0)
-   );
-   border-radius: 8px;
-}
-
 .landing-page-post-text-content {
-  position: absolute;
-  z-index: 3;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
   display: grid;
   align-content: end;
-  gap: 1rem;
-  padding: 1rem;
-  border-radius: 8px;
+  gap: 0.5rem;
 }
 
 .landing-page-post-title {
-  color: hsl(0, 0%, 100%);
+  color: var(--orange-10);
   line-height: 1.3;
-  font-size: clamp(1.3rem, 1vw + 1rem , 1.8rem);
+  font-size: clamp(1.1rem, 1vw + 1rem , 1.7rem);
   font-weight: 600;
 }
 
 .landing-page-post-content {
   letter-spacing: 0.07rem;
-  color: hsl(0, 0%, 90%);
+  color: var(--orange-20);
   line-height: 1.5;
   text-wrap: pretty;
 }
@@ -697,13 +677,14 @@ Landing Page
   display: flex;
   align-items: center;
   gap: 1.5rem;
+  margin-top: 0.3rem;
 }
 
 .landing-page-post-like-container {
   display: flex;
   align-items: center;
-  gap: 0.4rem;
-  color: var(--black-80);
+  gap: 0.3rem;
+  color: var(--black-40);
 }
 
 .landing-page-post-clap {
@@ -719,7 +700,7 @@ Landing Page
   display: flex;
   align-items: center;
   gap: 0.3rem;
-  color: var(--black-80);
+  color: var(--black-40);
 }
 
 .landing-page-post-num-of-post {
@@ -753,16 +734,74 @@ Landing Page
 }
 /* end */
 
-@media screen and (min-width: 500px) {
-
-  .landing-page-post-image{
-    aspect-ratio: 4/3;
-  }
-
-  .landing-page-post-title {
-    font-size: clamp(1.3rem, 3vw + 1rem , 1.8rem);
-  }
+/* Email subscription */
+.landing-page-email-sub-form-wrapper {
+  background: #e7ded5;
+  padding: 4rem 0;
 }
+
+.landing-page-email-form-contents {
+  width: 85%;
+  max-width: 450px;
+  margin: 0 auto;
+  display: grid;
+  align-content: start;
+  gap: 2rem;
+}
+
+.landing-page-email-form-text-container {
+  display: grid;
+  align-content: start;
+  gap: 0.5rem;
+
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+.landing-page-email-form-header {
+  text-wrap: pretty;
+  text-align: center;
+  color: var(--orange-10);
+  line-height: 1.1;
+  font-size: clamp(2rem, 4vw + 1rem, 2.5rem);
+}
+
+.landing-page-email-form-text {
+  text-align: center;
+  letter-spacing: 0.07rem;
+  line-height: 1.5;
+  color: var(--orange-20);
+  text-wrap: pretty;
+}
+
+.landing-page-email-sub-form {
+  display: grid;
+  gap: 0.8rem;
+}
+
+.landing-page-email-sub-form > input {
+  padding: 0.8rem 1rem;
+  border-radius: 5px;
+  border: none;
+  background: white;
+  font-size: 1rem;
+}
+
+.landing-page-email-sub-form > input:focus {
+  outline: 2px solid var(--orange-57);
+}
+
+.landing-page-email-sub-btn {
+  padding: 0.8rem 1rem;
+  border-radius: 5px;
+  border: none;
+  background: var(--orange-57);
+  font-weight: 500;
+  color: white;
+  font-size: 1rem;
+}
+/* end */
 
 @media screen and (min-width: 600px) {
 
@@ -803,15 +842,13 @@ Landing Page
     color: white;
   }
 
-  .landing-page-post-text-content {
-    padding: 1.5rem;
-  }
 }
 
 @media screen and (min-width: 676px) {
 
   .landing-page-featured-posts-wrapper {
     width: 90%;
+    gap: 3rem;
   }
 
   .landing-page-featured-posts {
@@ -833,30 +870,35 @@ Landing Page
 
   .landing-page-posts-wrapper {
     width: 90%;
-  }
-  
-  .landing-page-posts-wrapper {
     gap: 3rem;
   }
+  
+  .landing-page-posts {
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  }
 
+   .landing-page-post-title {
+    font-size: clamp(1.1rem, 1vw + 1rem , 1.2rem);
+  }
 }
 
 @media screen and (min-width: 835px) {
-
-  .landing-page-posts {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 3rem;
-  }
-
-  .landing-page-post-title {
-    font-size: clamp(1.3rem, 2vw + 1rem , 1.5rem);
-  }
 
   .landing-page-post-see-all-posts-container,
   .landing-page-topic-see-all-forums-container {
     margin-top: 1rem;
   }
 }
+
+/* @media screen and (min-width: 800px) {
+  .landing-page-email-form-contents {
+    display: grid;
+    align-content: start;
+    gap: 5rem;
+    max-width: 1000px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+} */
 
 @media screen and (min-width: 900px) {
   .landing-page-hero-wrapper {
@@ -897,10 +939,10 @@ Landing Page
   }
 
   .landing-page-hero-header {
-    font-size: clamp(2rem, 5vw + 1rem, 3.3rem);
     color: hsl(0, 0%, 100%);
     line-height: 1.2;
     text-wrap: pretty;
+    font-size: clamp(2rem, 5vw + 1rem, 3.3rem);
   }
 
   .landing-page-hero-paragraph {
@@ -970,6 +1012,7 @@ Landing Page
 
   .landing-page-featured-posts {
     grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
   }
 
   .landing-page-featured-post:last-child{
@@ -1007,7 +1050,7 @@ Landing Page
   .landing-page-topics-container {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: start;
     gap: 7rem;
     padding: 6rem 0;
   }
@@ -1019,6 +1062,10 @@ Landing Page
 
   .landing-page-topic-header-container {
     flex: 1
+  }
+
+  .landing-page-featured-posts-header {
+    font-size: clamp(2rem, 5vw + 1rem, 2.8rem);
   }
 
   .landing-page-topic-header {
@@ -1057,6 +1104,14 @@ Landing Page
 
   .mobile-landing-page-topic-see-all-forums-container {
     display: none
+  }
+
+  .landing-page-posts-header {
+    font-size: clamp(2rem, 5vw + 1rem, 2.8rem);
+  }
+
+  .landing-page-posts {
+    gap: 2rem;
   }
 }
 
